--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-.container:before,
+/* .container:before,
 .container:after {
   content: "";
   display: table;
@@ -10,4 +10,4 @@
 div {
   display:block;
   padding-bottom: 5px;
-}
+} */
